<resources>

<!--    Habitualizer helps you to improve your life with Quotes-->


    <!--        ****************************** Test ID's *****************************************-->
<!--    <string name="app_id" translatable="false">ca-app-pub-7883837684925648~1730063031</string>-->
<!--    <string name="admob_interstitial_CS_ad_unit" translatable="false">ca-app-pub-3940256099942544/1033173712</string>-->
<!--    <string name="admob_banner_ad_unit" translatable="false">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="admob_native_ad_unit" translatable="false">ca-app-pub-3940256099942544/2247696110</string>-->
<!--    <string name="admob_openapp_ad_unit" translatable="false">ca-app-pub-3940256099942544/1033173712</string>-->
<!--    <string name="admob_adaptive_banner_ad_unit" translatable="false">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="admob_reward_ad_unit" translatable="false">ca-app-pub-3940256099942544/5224354917</string>-->
    <!--        **********************************************************************************-->

    <!--        ****************************** Production ID's *****************************************-->
    <string name="app_id" translatable="false">ca-app-pub-6323519068521605~3751689583</string>
    <string name="admob_interstitial_CS_ad_unit" translatable="false">ca-app-pub-6323519068521605/2981533393</string>
    <string name="admob_banner_ad_unit" translatable="false">ca-app-pub-6323519068521605/5799268422</string>
    <string name="admob_native_ad_unit" translatable="false">ca-app-pub-6323519068521605/5192516347</string>
    <string name="admob_openapp_ad_unit" translatable="false">ca-app-pub-6323519068521605/1967834621</string>
    <string name="admob_adaptive_banner_ad_unit" translatable="false">ca-app-pub-6323519068521605/5799268422</string>
    <string name="admob_reward_ad_unit" translatable="false">ca-app-pub-6323519068521605/5847122460</string>
    <!--        **********************************************************************************-->


    <string name="app_name">Habitualizer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_1_bold_text">Are you excited?</string>
    <string name="intro_1_dec_text">This smart tool is designed to help you improve your roles, tasks, and responsibilities. Be mentally healthy!</string>
    <string name="intro_2_bold_text">Click on the bell</string>
    <string name="intro_2_dec_text">And choose the time to be notified</string>
    <string name="intro_3_bold_text">Welcome,</string>
    <string name="intro_3_dec_text">If you want to live a better life, you can start establishing good habits today.  30 days habit challenge ensures those good habits stays permanently in your life..</string>
    <string name="user_name">Kashif Asif</string>
    <string name="blog">Blog</string>
    <string name="premium">Premium</string>
    <string name="notifications">Notifications</string>
    <string name="community">community challenges</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="reminder">Reminders</string>
    <string name="contact">Contact us</string>
    <string name="logout">Logout</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="gratitude">Gratitude</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_theme">Change Theme</string>
    <string name="change_language">Change Language</string>
    <string name="app_tasks">App Tasks</string>
    <string name="title_activity_select_language">SelectLanguageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signup_navigation_text">Already have an account? want to <b><u>Login</u></b></string>
    <string name="login_navigation_text">Don\'t have an account? want to <b><u>SignUp</u></b></string>
    <string name="more"><u>More</u><![CDATA[ >>]]></string>
    <string name="hide"><![CDATA[<< ]]><u>Hide</u></string>
    <string name="by_subscribing_you_confirm_that_you_accept_our_terms_and_conditions">By Subscribing you confirm that you accept our <u><b>Terms and Conditions</b></u> and <b><u>privacy policy</u></b></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="coins">coins</string>
    <string name="you_have_received">You have Received </string>
    <string name="habitualizer">Habitualizer</string>
    <string name="signup">Signup</string>
    <string name="unique_user_name">Unique User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_failure">Due to some error SignUp Failed! Try again later.</string>
    <string name="confirm_pw_error">Confirm Password is not same!</string>
    <string name="confirm2_pw_error">Please Enter the Confirm Password!</string>
    <string name="short_pw_error">Password must have at least 6 characters!</string>
    <string name="enter_pw">Please Enter the Password!</string>
    <string name="last_name_error">Please Enter the your Last Name!</string>
    <string name="first_name_error">Please Enter the your First Name!</string>
    <string name="user_already_exist_error">This Username is already taken please select new one!</string>
    <string name="user_name_error">Please Enter Username!</string>
    <string name="invalid_username_pw">Invalid username or password</string>
    <string name="try_again">Error! Please try again later!</string>
    <string name="select_emoji">Please Select the Emoji for Task!</string>
    <string name="enter_description">Please Enter the Challenge Description!!</string>
    <string name="enter_challenge_name">Please Enter the Challenge Name!!</string>
    <string name="empty_task">Empty Tasks!!</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="select_language">Select Language</string>
    <string name="created_by">created by </string>
    <string name="community_challenges">Community Challenges</string>
    <string name="create_nchallenge">Create\nChallenge</string>
    <string name="challenges_created_by_the_community">Challenges created by the Community.</string>
    <string name="start_challenge">Start Challenge</string>
    <string name="feed">Forum</string>
    <string name="flower">Flower</string>
    <string name="hug">Hug</string>
    <string name="high_five">High Five</string>
    <string name="love">Love</string>
    <string name="appreciation">Appreciation</string>
    <string name="thankyou">Thank you</string>
    <string name="comments">Comments</string>
    <string name="enter_your_thoughts">Enter your thoughts</string>
    <string name="uploaded">Uploaded Successfully!</string>
    <string name="uploaded_error">Fail To Upload data! try again later</string>
    <string name="possible_ans">Please enter at least one possible answer!</string>
    <string name="possible_que">"Please Enter the Question!"</string>
    <string name="enter_your_desire_question">Enter Your Desire Question</string>
    <string name="enter_at_least_one_possible_answer">Enter at least one possible answer.</string>
    <string name="gratitude_is_the_appreciation_if_those_wonderful_things_that_we_take_for_granted">Gratitude is the Appreciation of those Wonderful things that we take for granted</string>
    <string name="scratch_and_win">Scratch and Win</string>
    <string name="scratch_again">Scratch Again</string>
    <string name="hidden_tasks">Hidden Tasks</string>
    <string name="am_pm_error">Please Select the AM/PM</string>
    <string name="minutes_error">Please Select the Minutes!</string>
    <string name="hours_error">Please Select the Hours!</string>
    <string name="task_available_error">New task available after 24 hours!</string>
    <string name="not_found">Error 404</string>
    <string name="day">Day </string>
    <string name="tap_to_see_today_s_challenge">Tap to see Today\'s challenge</string>
    <string name="share">Share</string>
    <string name="complete_the_task_to_earn_10">Complete the task to earn 10</string>
    <string name="notification_title">What’s your Habitualizer?</string>
    <string name="notification_body">What’s your Habitualizer?</string>
    <string name="no_more_ads">No More Ads</string>
    <string name="double_reward">Double Reward</string>
    <string name="support_us">Support Us</string>
    <string name="free_trial">Free Trial</string>
    <string name="monthly_package">Monthly Package</string>
    <string name="yearly_package">Yearly Package</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="select_theme">Select Theme</string>
    <string name="buy">Buy</string>
    <string name="no_quote_available">No Quote available</string>
    <string name="relaxing_music">Relaxing Music</string>
    <string name="notification">Notification</string>
    <string name="set_time">Set time</string>
    <string name="select_time">Select time</string>
    <string name="add">Add</string>
    <string name="like">Like</string>
    <string name="edit">Edit</string>
    <string name="share_app_text">Check this out! Habitulizer is an amazing app:  </string>
    <string name="reminder_quote">Reminder Quote</string>
    <string name="this_will_be_reminder_quote">This will be reminder quote</string>
    <string name="click_to_open_reminder_quote">Click To Open Reminder Quote</string>
    <string name="open_with_50">Open with 50</string>
    <string name="do_you_want_to_start_challenge">Do you want to Start challenge?</string>
    <string name="let_go">Let\'s go!</string>
    <string name="task_completed">Task Completed</string>
    <string name="let_s_go">Let\'s go!</string>
    <string name="available_after_n24_hours">Available after\n24 hours</string>
    <string name="message_subscribed">subscribed</string>
    <string name="enjoy_a_3_day_free_trial_then_week">Enjoy a 3 Day Free Trial - Then</string>
    <string name="week">/ week.</string>
    <string name="full_access">FULL ACCESS</string>
    <string name="greeting1">Good Morning!</string>
    <string name="greeting2">Good Afternoon!</string>
    <string name="greeting3">Good Evening!</string>
    <string name="rate_us">Rate Us</string>
    <string name="invite_link_error">Invalid Link!!</string>
    <string name="new_blog_post">New Blog Post</string>
    <string name="privacy_policy_text">By continuing, I confirmed that I have read &amp; agree to the <b><u>Terms and conditions</u></b> and <b><u>privacy policy</u></b></string>
    <string name="privacy_policy_permission">Please do agree with the Terms and conditions and privacy policy </string>
</resources>