<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feed.createfeed.CreateFeedActivity"
    android:background="@color/theme"
    android:id="@+id/root">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_7sdp"
            android:rotation="180"
            android:src="@drawable/icon_forward"
            app:tint="@color/theme_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toEndOf="@id/back_button"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/feed"
            android:textColor="@color/theme_white"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/task_rv_background"
        android:orientation="vertical">

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:elevation="@dimen/_2sdp"
            app:ms_hint="@string/select_language"
            app:ms_hint_color="@color/hint_color"
            app:ms_background_color="@color/light_black"/>

        <EditText
            android:id="@+id/et_feed_question"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/roboto_regular"
            android:gravity="start|top"
            android:hint="@string/enter_your_desire_question"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:textColor="@color/theme_black"
            android:textSize="@dimen/_10sdp" />

        <EditText
            android:id="@+id/et_feed_answer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/roboto_regular"
            android:gravity="start|top"
            android:hint="@string/enter_at_least_one_possible_answer"
            android:inputType="textMultiLine"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:textColor="@color/theme_black"
            android:textSize="@dimen/_10sdp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_save_btn"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:cardBackgroundColor="@color/theme"
            app:cardCornerRadius="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/create"
                android:textColor="@color/theme_white"
                android:textSize="@dimen/_12sdp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</RelativeLayout>