<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    android:id="@+id/root"
    tools:context=".ui.auth.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:orientation="vertical"
        android:background="@drawable/task_rv_background">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/app_icon"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:src="@drawable/splash_icon" />

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/habitualizer"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:id="@+id/text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="@dimen/_17sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/login"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/edit_text_background"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_1"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_1sdp"
                        app:cardBackgroundColor="@color/theme"
                        app:cardCornerRadius="@dimen/_4sdp" />

                    <EditText
                        android:id="@+id/et_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/unique_user_name"
                        android:inputType="text"
                        android:textColor="@color/theme_black"
                        android:textColorHint="@color/hint_color"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/edit_text_background"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_2"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_1sdp"
                        app:cardBackgroundColor="@color/theme"
                        app:cardCornerRadius="@dimen/_4sdp" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColorHint="@color/hint_color"
                        android:textColor="@color/theme_black"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_signup_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/login_navigation_text"
                    android:textColor="@color/theme_black"
                    android:textSize="@dimen/_10sdp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/confirm_card"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/theme"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardElevation="@dimen/_3sdp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:elevation="0dp"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/icon_forward"
                        app:tint="@color/theme_white"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>