<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_white"
    android:orientation="vertical"
    tools:context=".ui.introscreens.IntroActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/intro_background_img" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/view_pager">

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dots_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:dotsColor="#C1BEF3"
                    app:dotsCornerRadius="8dp"
                    app:dotsSize="10dp"
                    app:dotsSpacing="2dp"
                    app:dotsWidthFactor="2.5"
                    app:progressMode="true"
                    app:selectedDotColor="@color/blue" />

                <LinearLayout
                    android:id="@+id/linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dots_indicator"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/intro_bold_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/intro_1_bold_text"
                        android:textColor="@color/theme_black"
                        android:textSize="@dimen/_22sdp" />


                    <TextView
                        android:id="@+id/intro_description_text"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/intro_1_dec_text"
                        android:textAlignment="center"
                        android:textColor="@color/theme_black"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/intro_next_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_below="@id/linearlayout"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_50sdp"
                    app:cardBackgroundColor="@color/theme"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/tvCreateChallenge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/next"
                        android:textColor="@color/theme_white"
                        android:textSize="@dimen/_15sdp" />
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>